--- a/CityApi.Api/appsettings.json
+++ b/CityApi.Api/appsettings.json
@@ -10,8 +10,8 @@
     "CityApiDatabase": "Server=(localdb)\\mssqllocaldb;Database=CityApi;Trusted_Connection=True;"
   },
   "APIEndpoints": {
-    "Countries": "https://restcountries.com/v3.1",
-    "Weather": "https://api.openweathermap.org/data/2.5/weather",
+    "CountriesEndpoint": "https://restcountries.com/v3.1",
+    "WeatherEndpoint": "https://api.openweathermap.org/data/2.5/weather",
     "OpenWeatherMapKey": "<YOUR_API_KEY_HERE>"
   }
 }
